# markov_word_gen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  corpus0.txt  corpus1.txt  corpus2.txt  logs.txt  main.cpp  mcwg.h
res/adjectives/: corpus.txt
res/other/: corpus_words_short.txt
