cmake_minimum_required(VERSION 3.16.3)
project(markow_word_gen)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_executable(markow_word_gen main.cpp)
set_property(TARGET markow_word_gen PROPERTY CXX_STANDARD 20)
target_include_directories(markow_word_gen PUBLIC ${PROJECT_SOURCE_DIR})